    28- [libpari] Fp_divu
BA  29- [libpari] ZpXQX_liftroots
    30- new GP functions getlocalprec, getlocalbitprec
    31- [libpari] guncloneNULL, gluncloneNULL_deep
    32- allow subst(e, x, vector v) for vector(subst(e, x, v[i]))
    33- [libpari] pollegendre_reduced
AP  34- new GP function mfgaloisprojrep
    35- optional v argument to nfmodprinit
    36- [libpari] rfrac_deflate, rfrac_deflate_order, rfrac_deflate_max
    37- [libpari] identity_zv, identity_ZV
    38- [libpari] polintspec, polint_i
BA  39- [libpari] FF_var, FF_preimagerel
BA  40- new GP function ffmaprel
BA  41- [libpari] closure_derivn
BA  42- [libpari] walltimer_start, walltimer_delay, pari_get_histrtime
BA  43- new GP function strtime
BA  44- [libpari] Flxn_exp, Flx_Newton, Flx_fromNewton, Flx_Laplace,
        Flx_invLaplace
BA  45- Support call by reference in GP function: f(~L,x)=listput(~L,x+1)
BA  46- Generic fast linear algebra using CUP decomposition
    47- [libpari] nfX_to_monic
BA  48- new GP function derivn
BA  49- new GP function arity
    50- new GP functions idealdown, idealismaximal
    51- [libpari] bid_get_fact2
AP  52- new GP function bnrclassfield
HC  53- implement lfunmfspec in odd weight
HC  54- new GP functions ellE and ellK
    55- [libpari] maxprimeN
BA  56- support for rational model in ellratpoints and hyperellratpoints
    57- [libpari] psi1series
    58- [libpari] constzeta
    59- new GP function nfdiscfactors
    60- [libpari] RgV_is_arithprog
    61- fast algorithm for zeta([a + b*n | n<-[0..N]])
BA  62- ellheight(E) now returns the Faltings height of E
BA  63- lfun now allows non-integral weights
OB  64- example/parigp.sty to re-enable PARI's \pmatrix with amsmath [#2110]
IZ  65- [win32+gp-sta] support for install()
    66- [libpari] setunion_i

  Removed
     1- member functions .futu and .tufu [deprecated since 2.2]
     2- inferior hash function hash_str2: use hash_str
     3- matsnf: remove obsolete binary flag '2' [make it a no no-op] (cf mathnf)